@@ -7,8 +7,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - $ENV{PATH}
 
-- Apache::SubRequest->bytes_sent
-
 - Apache::SizeLimit (Brian Moseley)
 
 - 'make htmldoc' (Brian Moseley)
